--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="one">
             <h1 class="one">
                 Hi
-                <span id="name">Irene</span>
+                <span id="name">Vân</span>
             </h1>
             <p class="two" id="greetingText">I really like your name btw!</p>
         </div>
@@ -39,8 +39,7 @@
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                Happy birthday to youu!! Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur quisquam amet ipsam vitae, voluptatum architecto aliquid id quo error tempora quos aperiam magni necessitatibus quas ut, possimus nesciunt nam ad.
-                </p>
+Happy birthday to youuu! Wishing you lots of joy, health, and happiness. May this year bring you amazing memories and countless smiles.                </p>
                 <p class="fake-btn">Send</p>
             </div>
         </div>
@@ -57,6 +56,8 @@
             <p class="idea-5">
                 You are Special
                 <span>:)</span>
+               <p class="idea-5b">
+        (but not <strong>my</strong> special, don’t worry 😆)
             </p>
             <p class="idea-6">
                 <span>S</span>
@@ -69,7 +70,7 @@
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
                 <h3 class="wish-hbd">Happy Birthday!</h3>
-                <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
+                <h5 id="wishText">I hope that carefree spirit never leaves you :)).</h5>
             </div>
         </div>
 
