--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
     <audio class="song" loop autoplay>
-        <source src="./music/hbd.mpeg">
+        <source src="./music/music_hdb.mp3">
         </source>
         Your browser isn't invited for super fun audio time.
     </audio>
@@ -54,10 +54,8 @@ Happy birthday to youuu! Wishing you lots of joy, health, and happiness. May thi
             </p>
             <p class="idea-4">Because,</p>
             <p class="idea-5">
-                You are Special
-                <span>:)</span>
-               <p class="idea-5b">
-        (but not <strong>my</strong> special, don’t worry 😆)
+                You are Special <span>:)</span> <br>
+    <small>(but not <strong>my</strong> special, don’t worry )</small>
             </p>
             <p class="idea-6">
                 <span>S</span>
@@ -66,7 +64,7 @@ Happy birthday to youuu! Wishing you lots of joy, health, and happiness. May thi
         </div>
 
         <div class="six">
-            <img src="./img/irene.jpg" alt="profile" class="profile-picture" id="imagePath"/>
+            <img src="./img/van.jpg" alt="profile" class="profile-picture" id="imagePath"/>
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
                 <h3 class="wish-hbd">Happy Birthday!</h3>
